# graph-corag

./: .gitignore  README.md  pyproject.toml  run_pipeline.ps1
config/: aliases.manual.jsonl  name_normalization.yaml  relation_schema.json  surf2cui.json  umls_dict.overlay.json  umls_dict.txt
docs/: ARCHITECTURE_MAP.md  DEBUG_ENTRYPOINTS.md  PIPELINE_FLOW.md  PROJECT_TREE.md  TOOLS_ENV_LIBS.md  kb_build.md
docs/pipeline_docs_2026-01-27/: DATA_SCHEMAS.md  ENVIRONMENT_AND_REPRODUCIBILITY.md  KG_AND_RELATIONS.md  (+3 more)
scripts/: 00_end2end_from_raw.py  01_build_kg_catalog.py  02_embed_kg_aliases_sapbert.py  analyze_with_el_and_intent.py  build_entity_catalog_phase03.py  build_kg_drug_subtypes.py  build_sapbert_index.py  build_sapbert_indexes_phase11.py  build_surf2cui.py  build_umls_sapbert_index.py  download_sapbert.py  eval_intent_file.py  evaluate_claims.py  generate_hard_intent_set.py  link_with_sapbert.py  post_analyze_add_intent.py  pre_analyze_raw.py  prune_index_to_kg.py  run_hybrid.py  run_ner_offline.py  summarize_pipeline_results.py  test_all.ps1  test_pipeline_components.py  test_sapbert_linker.py  test_typeaware_el.py  train_intent_classifier.py  train_intent_classifier_robust.py  train_intent_classifier_win.py  train_intent_classifier_win_fix.py  umls_download.py  validate_concept_index.py
tools/: build_ddi_patch.ps1  build_queries_from_kg.ps1  create_run_snapshot.ps1  generate_retrieval_cache.py  list_largest_files.ps1  patch_run_pipeline.py  perform_safe_cleanup.ps1  quarantine_root_generated.ps1  run_pipeline.ps1  smoke_test_pipeline.ps1  stage_allowlist.ps1
(+53 files in other folders)
